syntax = "proto3";

package messages;
option java_multiple_files = true;
option java_package = "messages";
option java_outer_classname = "PersonRequestProto";

message PersonRequest {
    int32 id = 1;
}