syntax = "proto3";

package messages;


option java_multiple_files = true;
option java_package = "messages";
option java_outer_classname = "PersonResponseProto";

message PersonResponse {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string phone = 4;
  int32 age = 5;
}